force-app/main/default/objects/Elaro_Evidence_Anchor__c/Elaro_Evidence_Anchor__c.object-meta.xml
<CustomObject>
    <description>Stores blockchain anchor records for evidence verification</description>
    <label>Elaro Evidence Anchor</label>
    <nameField>
        <label>Anchor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elaro Evidence Anchors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>