force-app/main/default/objects/Elaro_Evidence_Anchor__c/fields/Blockchain_Network__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Network__c</fullName>
    <label>Blockchain Network</label>
    <length>50</length>
    <type>Text</type>
</CustomField>