force-app/main/default/objects/Elaro_Evidence_Anchor__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <externalId>true</externalId>
    <label>Content Version ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>