force-app/main/default/objects/Elaro_Evidence_Anchor__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Blockchain transaction ID</description>
    <label>Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>